# cocox

./: .env.example  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  main.py  pyproject.toml  requirements_dev.txt  test_cctools.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: badges.yml  dependencies.yml  docs.yml  release.yml  test.yml
cocox/: __init__.py  cli.py  cocox.py
cocox/base/: __init__.py  core.py
cocox/utils/: __init__.py  callback.py  common.py  logger.py  minio_core.py  plot.py
docs/: API.rst  EXAMPLES.rst  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  conftest.py  test_cocox.py
tests/data/: sample_coco.json
tests/data/coco_data/annotations/: instances_default.json
tests/data/common/: gt_summary.json
tests/data/merge/to_merge12/annotations/: instances_Train.json
tests/data/merge/to_merge21/annotations/: instances_Validation.json
tests/data/merge/to_merge22/annotations/: instances_Train.json
tests/data/merge/to_merge23/annotations/: instances_Train.json
tests/data/merge/to_merge24/annotations/: instances_Train.json
tests/data/test01/: gt_summary.json
tests/data/test02/annotations/: instances_default.json
